# async-cdek-api

./: CHANGELOG.md  MANIFEST.in  README.md  __init__.py  client.py  common.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  pypi.yml
aiocdek/: __init__.py
aiocdek/api/: locations.py
aiocdek/client/: cdek.py
aiocdek/enums/: enums.py
api/: calculator.py  courier.py  delivery_points.py  locations.py  orders.py  printing.py  webhooks.py
client/: cdek.py
docs/: API_REFERENCE.md  EXAMPLES.md
models/: base.py  calculator.py  courier.py  delivery_points.py  locations.py  orders.py  printing.py  webhooks.py
